# apero-gjs

./: .editorconfig  .eslintrc  .gitignore  meson.build  package-lock.json  package.json  shell.nix  tsconfig.json
src/: apero.in  apero.src.gresource.xml.in  app.ts  bar.ts  demo.ts  demo.ui  main.ts  meson.build
src/ui/: gtk-layer-shell.ts  windows.ts
types/: layer-shell.d.ts
